--- a/.github/workflows/crazy-train.yml
+++ b/.github/workflows/crazy-train.yml
@@ -38,4 +38,4 @@ jobs:
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: app/crazy_train/coverage/lcov/crazy_train.lcov
+        path-to-lcov: ./app/crazy_train/coverage/lcov/crazy_train.lcov
