--- a/.github/workflows/crazy-train.yml
+++ b/.github/workflows/crazy-train.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Test with minitest
       run: |
         cd app/crazy_train
-        ./bin/rails test -v
+        CI=true ./bin/rails test -v
     - name: Upload coverage to coveralls.io
       uses: coverallsapp/github-action@master
       with:
