--- a/.github/workflows/crazy-train.yml
+++ b/.github/workflows/crazy-train.yml
@@ -38,5 +38,5 @@ jobs:
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ${{ github.workspace }}/app/crazy_train/coverage/lcov/crazy_train.lcov
+        path-to-lcov: ${{ github.workspace }}/app/crazy_train/coverage/lcov/crazy_train.lcovvvvvvvvvvv
         base-path: app/crazy_train
