--- a/.github/workflows/crazy-train.yml
+++ b/.github/workflows/crazy-train.yml
@@ -39,4 +39,6 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: ./app/crazy_train/coverage/lcov/crazy_train.lcov
-        base-path: ./app/crazy_train
+        base-path: app/crazy_train
+      env:
+        NODE_COVERALLS_DEBUGs: 1
