--- a/app/crazy_train/Gemfile
+++ b/app/crazy_train/Gemfile
@@ -43,6 +43,7 @@ group :development, :test do
   gem "simplecov", "~> 0.21.2"
   gem "simplecov-lcov", "~> 0.8.0"
   gem "simplecov-html", "~> 0.12.3" # if you'd like classic html coverage reports
+  gem "coveralls_reborn", "~> 0.23.1"
 end
 
 group :development do
