--- a/.github/workflows/crazy-train.yml
+++ b/.github/workflows/crazy-train.yml
@@ -33,12 +33,12 @@ jobs:
     - name: Test with minitest
       run: |
         cd app/crazy_train
-        CI=true ./bin/rails test -v
-    - name: Upload coverage to coveralls.io
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ./app/crazy_train/coverage/lcov.info
-        base-path: app/crazy_train
-      env:
-        NODE_COVERALLS_DEBUG: 1
+        CI=1 ./bin/rails test -v
+#    - name: Upload coverage to coveralls.io
+#      uses: coverallsapp/github-action@master
+#      with:
+#        github-token: ${{ secrets.GITHUB_TOKEN }}
+#        path-to-lcov: ./app/crazy_train/coverage/lcov.info
+#        base-path: app/crazy_train
+#      env:
+#        NODE_COVERALLS_DEBUG: 1
