Add usage of codecov service.

--- a/.github/workflows/crazy-train.yml
+++ b/.github/workflows/crazy-train.yml
@@ -34,11 +34,9 @@ jobs:
       run: |
         cd app/crazy_train
         CI=1 ./bin/rails test -v
-#    - name: Upload coverage to coveralls.io
-#      uses: coverallsapp/github-action@master
-#      with:
-#        github-token: ${{ secrets.GITHUB_TOKEN }}
-#        path-to-lcov: ./app/crazy_train/coverage/lcov.info
-#        base-path: app/crazy_train
-#      env:
-#        NODE_COVERALLS_DEBUG: 1
+  - name: Upload coverage to codecov.io
+    uses: codecov/codecov-action@v2
+    with:
+      files: ./app/crazy_train/coverage/lcov/crazy_train.lcov
+      fail_ci_if_error: true
+      verbose: true
