--- a/.github/workflows/crazy-train.yml
+++ b/.github/workflows/crazy-train.yml
@@ -34,6 +34,7 @@ jobs:
       run: |
         cd app/crazy_train
         ./bin/rails test -v
+#        ruby ./bin/fix-lcov-path.rb
         cat ./coverage/lcov/crazy_train.lcov
     - name: Upload coverage to codecov.io
       uses: codecov/codecov-action@v2
