Add missing rubocop dep.

--- a/app/crazy_train/Gemfile
+++ b/app/crazy_train/Gemfile
@@ -40,10 +40,11 @@ group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[mri mingw x64_mingw]
 
+  gem "rubocop"
   gem "simplecov", "~> 0.21.2"
-  gem "simplecov-lcov", "~> 0.8.0"
-  gem "simplecov-html", "~> 0.12.3" # if you'd like classic html coverage reports
   gem "simplecov-console"
+  gem "simplecov-html", "~> 0.12.3" # if you'd like classic html coverage reports
+  gem "simplecov-lcov", "~> 0.8.0"
 end
 
 group :development do
