--- a/app/crazy_train/Gemfile
+++ b/app/crazy_train/Gemfile
@@ -43,6 +43,7 @@ group :development, :test do
   gem "debug", platforms: %i[mri mingw x64_mingw]
 
   gem "rubocop"
+  gem "standard"
   gem "simplecov", "~> 0.21.2"
   gem "simplecov-console"
   gem "simplecov-html", "~> 0.12.3" # if you'd like classic html coverage reports
