--- a/app/crazy_train/.rubocop.yml
+++ b/app/crazy_train/.rubocop.yml
@@ -10,3 +10,12 @@
 # See https://docs.rubocop.org/rubocop/configuration
 Style/StringLiterals:
   EnforcedStyle: double_quotes
+Layout/HashAlignment:
+  EnforcedHashRocketStyle: table
+  EnforcedColonStyle: table
+Layout/SpaceInsideHashLiteralBraces:
+  EnforcedStyle: no_space
+Layout/ArgumentAlignment:
+  EnforcedStyle: with_fixed_indentation
+Style/StringLiteralsInInterpolation:
+  EnforcedStyle: double_quotes
