Add comments resource test.

--- a/app/crazy_train/.rubocop.yml
+++ b/app/crazy_train/.rubocop.yml
@@ -21,3 +21,5 @@ Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
 Style/Documentation:
   Enabled: false
+Style/MethodCallWithArgsParentheses:
+  EnforcedStyle: omit_parentheses
