--- a/app/crazy_train/Gemfile
+++ b/app/crazy_train/Gemfile
@@ -58,3 +58,7 @@ group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
 end
+
+group :production do
+  gem "pg"
+end
